# LocalPDF

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
backend/: .gitignore  main.py  pyproject.toml  utils.py
backend/routers/: info.py  merge.py  rotate.py  split.py
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DevPage.tsx  FileDropzone.tsx  MergeTool.tsx  PageGrid.tsx  RotateTool.tsx  SplitTool.tsx  ToolGrid.tsx  ToolLayout.tsx
frontend/src/hooks/: useApi.ts
