[project]
name = "backend"
version = "0.1.0"
description = "LocalPDF — A self-hosted PDF toolkit for merging, splitting, rotating, compressing and more. No uploads, no limits, fully private."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "pikepdf>=10.3.0",
    "pillow>=12.1.1",
    "pypdf>=6.7.5",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.41.0",
]
